--- a/config.json
+++ b/config.json
@@ -1,10 +1,11 @@
 {
 
   "classes": {
-    "earth": {"value":[1,0,0]},
-    "potato_leaf": {"value":[0,1,0]},
-    "potato_flower": {"value": [0,0,1]}
+    "earth"         : {"value" : [1, 0, 0]},
+    "potato_leaf"   : {"value" : [0, 1, 0]},
+    "potato_flower" : {"value" : [0, 0, 1]}
 
   },
-  "window_shape": [32,32,3]
+  "window_shape"  : [32, 32, 3],
+  "qt_label_size" : [64, 64]
 }
