universality_via_config_files: img_thumb param added to config_gui.json. Using added in gui_window_train_form and gui_window_predict_on_image

--- a/config_gui.json
+++ b/config_gui.json
@@ -7,5 +7,6 @@
 
   },
   "window_shape"  : [32, 32, 3],
-  "qt_label_size" : [64, 64]
+  "qt_label_size" : [64, 64],
+  "img_thumb": [2048, 2048]
 }
