--- a/config_gui.json
+++ b/config_gui.json
@@ -1,9 +1,9 @@
 {
 
   "classes": {
-    "earth"         : {"value" : [1, 0, 0]},
-    "potato_leaf"   : {"value" : [0, 1, 0]},
-    "potato_flower" : {"value" : [0, 0, 1]}
+    "earth"         : {"value" : [0]},
+    "potato_leaf"   : {"value" : [1]},
+    "potato_flower" : {"value" : [2]}
 
   },
   "window_shape"  : [256, 256, 3],
