--- a/config_gui_diseases.json
+++ b/config_gui_diseases.json
@@ -2,32 +2,45 @@
 
   "classes": {
     "Грибные инфекции": {
-      "фитофтороз":                           {"value": [1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]},
-      "альтернариоз":                         {"value": [0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]},
-      "рак картофеля":                        {"value": [0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]}
+      "фитофтороз":                           {"value": [0]},
+      "альтернариоз":                         {"value": [1]},
+      "рак картофеля":                        {"value": [2]}
     },
     "Бактериальные": {
-      "черная ножка стеблей":                 {"value": [0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0]},
-      "кольцевая гниль":                      {"value": [0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0]},
-      "бурый слизистый бактериоз":            {"value": [0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0]}
+      "черная ножка стеблей":                 {"value": [3]},
+      "кольцевая гниль":                      {"value": [4]},
+      "бурый слизистый бактериоз":            {"value": [5]}
     },
     "Вирусы": {
-      "полосатая мозаика":                    {"value": [0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0]},
-      "обыкновенная мозаика":                 {"value": [0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0]},
-      "морщинистая мозаика":                  {"value": [0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0]}
+      "полосатая мозаика":                    {"value": [6]},
+      "обыкновенная мозаика":                 {"value": [7]},
+      "морщинистая мозаика":                  {"value": [8]}
     },
     "Наиболее вредоносные": {
-      "вирус скручивания листьев картофеля":  {"value": [0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0]},
-      "вирус картофеля X":                    {"value": [0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0]},
-      "вирус картофеля S":                    {"value": [0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0]},
-      "вирус картофеля M":                    {"value": [0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0]},
-      "вирус картофеля A":                    {"value": [0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0]},
-      "вирус картофеля Y":                    {"value": [0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0]}
+      "вирус скручивания листьев картофеля":  {"value": [9]},
+      "вирус картофеля X":                    {"value": [10]},
+      "вирус картофеля S":                    {"value": [11]},
+      "вирус картофеля M":                    {"value": [12]},
+      "вирус картофеля A":                    {"value": [13]},
+      "вирус картофеля Y":                    {"value": [14]}
     },
     "Вредители": {
-      "нематоды":                             {"value": [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0]},
-      "колорадские жуки":                     {"value": [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0]},
-      "проволочники":                         {"value": [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]}
+      "нематоды":                             {"value": [15]},
+      "колорадские жуки":                     {"value": [16]},
+      "проволочники":                         {"value": [17]}
+    },
+    "Сорняки": {
+      "марь белая":                           {"value": [18]},
+      "подмаренник цепкий":                   {"value": [19]},
+      "щирица":                               {"value": [20]},
+      "пастушья сумка":                       {"value": [21]},
+      "сурепка дикая":                        {"value": [22]},
+      "куриное просо":                        {"value": [23]},
+      "овсюг":                                {"value": [24]},
+      "пырей ползучий":                       {"value": [25]},
+      "вьюнок":                               {"value": [26]},
+      "бодяк":                                {"value": [27]},
+      "осот":                                 {"value": [28]}
     }
   },
   "window_shape"  : [256, 256, 3],
