PlantDisease : config_gui_diseases.json updated

--- a/config_gui_diseases.json
+++ b/config_gui_diseases.json
@@ -4,43 +4,41 @@
     "Грибные инфекции": {
       "фитофтороз":                           {"value": [0]},
       "альтернариоз":                         {"value": [1]},
-      "рак картофеля":                        {"value": [2]}
+      "прочие инфекции":                      {"value": [2]}
     },
     "Бактериальные": {
-      "черная ножка стеблей":                 {"value": [3]},
-      "кольцевая гниль":                      {"value": [4]},
-      "бурый слизистый бактериоз":            {"value": [5]}
+      "кольцевая гниль":                      {"value": [3]},
+      "бурый слизистый бактериоз":            {"value": [4]},
+      "прочие гнили":                         {"value": [5]}
     },
     "Вирусы": {
       "полосатая мозаика":                    {"value": [6]},
       "обыкновенная мозаика":                 {"value": [7]},
-      "морщинистая мозаика":                  {"value": [8]}
+      "морщинистая мозаика":                  {"value": [8]},
+      "прочие мозаики":                       {"value": [9]}
     },
-    "Наиболее вредоносные": {
-      "вирус скручивания листьев картофеля":  {"value": [9]},
-      "вирус картофеля X":                    {"value": [10]},
-      "вирус картофеля S":                    {"value": [11]},
-      "вирус картофеля M":                    {"value": [12]},
-      "вирус картофеля A":                    {"value": [13]},
-      "вирус картофеля Y":                    {"value": [14]}
+    "Неопределенные болезни": {
+      "неопределенная болезнь":               {"value": [10]}
     },
     "Вредители": {
-      "нематоды":                             {"value": [15]},
-      "колорадские жуки":                     {"value": [16]},
-      "проволочники":                         {"value": [17]}
+      "нематоды":                             {"value": [11]},
+      "колорадские жуки":                     {"value": [12]},
+      "проволочники":                         {"value": [13]},
+      "прочие вредители":                     {"value": [14]}
     },
     "Сорняки": {
-      "марь белая":                           {"value": [18]},
-      "подмаренник цепкий":                   {"value": [19]},
-      "щирица":                               {"value": [20]},
-      "пастушья сумка":                       {"value": [21]},
-      "сурепка дикая":                        {"value": [22]},
-      "куриное просо":                        {"value": [23]},
-      "овсюг":                                {"value": [24]},
-      "пырей ползучий":                       {"value": [25]},
-      "вьюнок":                               {"value": [26]},
-      "бодяк":                                {"value": [27]},
-      "осот":                                 {"value": [28]}
+      "марь белая":                           {"value": [15]},
+      "подмаренник цепкий":                   {"value": [16]},
+      "щирица":                               {"value": [17]},
+      "пастушья сумка":                       {"value": [18]},
+      "сурепка дикая":                        {"value": [19]},
+      "куриное просо":                        {"value": [20]},
+      "овсюг":                                {"value": [21]},
+      "пырей ползучий":                       {"value": [22]},
+      "вьюнок":                               {"value": [23]},
+      "бодяк":                                {"value": [24]},
+      "осот":                                 {"value": [25]},
+      "прочие сорняки":                       {"value": [26]}
     }
   },
   "window_shape"  : [256, 256, 3],
