--- a/config_augmentation.json
+++ b/config_augmentation.json
@@ -24,9 +24,20 @@
         1.1,
         1.2,
         1.3,
-        1.4
+        1.4,
+        1.5
       ],
       "use": true
+    },
+    "affine": {
+      "val_list": [
+        1,
+        2,
+        3,
+        4,
+        5
+      ],
+      "use": false
     }
   }
 }
