preprocessing: (segmentation -> preprocessing) preprocessing part integrated to main_fit_CNN & main_full_system_predict

--- a/config_fit_CNN.json
+++ b/config_fit_CNN.json
@@ -9,6 +9,12 @@
       "eval": 0.95
     }
   },
+  "preprocessor": {
+    "use": true,
+    "name": "contrast",
+    "args": {
+    }
+  },
   "model": {
     "create_new": false,
     "new": {
