--- a/config_full_system.json
+++ b/config_full_system.json
@@ -7,7 +7,7 @@
       "img_thumb": [8192,8192]
     }
   },
-  "segmentator": {
+  "preprocessor": {
     "use": false,
     "name": "Unet",
     "args": {
