data_augmentation: saving to dir after augmentation added

--- a/config_data_augmentation.json
+++ b/config_data_augmentation.json
@@ -52,5 +52,8 @@
     }
   },
   "aug_part": 6,
-  "augment_all": true
+  "augment_all": true,
+  "output_json": "Datasets/final_dataset/big_dir_ds/big_ds.json",
+  "save_data_to_binary": false,
+  "save_data_to_dir": true
 }
