fit_CNN: using flow_from_dataframe added

--- a/config_fit_CNN.json
+++ b/config_fit_CNN.json
@@ -2,7 +2,7 @@
   "data": {
     "create_flow_dir": false,
     "flow_dir": "Datasets/final_dataset/big_flow_dir",
-    "train_json": "Datasets/final_dataset/DJI_0999_joined_with_blur_4620.json"
+    "train_json": "Datasets/final_dataset/big_dir_ds/big_ds.json"
   },
   "fit": {
     "baseline": {
@@ -12,7 +12,7 @@
     }
   },
   "preprocessor": {
-    "use": true,
+    "use": false,
     "name": "contrast",
     "args": {
     }
