--- a/config_full_system.json
+++ b/config_full_system.json
@@ -21,16 +21,16 @@
       "json_path": "models/DenseNet_99_99_100/model_DenseNet121_75.json",
       "h5_path": "models/DenseNet_99_99_100/model_DenseNet121_75.h5",
       "classes": {
-        "фиотофтороз": {
+        "ФИТОФТОРОЗ": {
           "value": [1, 0, 0, 0]
         },
-        "мозаика": {
+        "МОЗАИКА": {
           "value": [0, 1, 0, 0]
         },
-        "сорняк": {
+        "СОРНЯК": {
           "value": [0, 0, 1, 0]
         },
-        "здоровый куст": {
+        "ЗДОРОВЫЙ КУСТ": {
           "value": [0, 0, 0, 1]
         }
       },
@@ -38,6 +38,6 @@
     }
   },
   "gui": {
-    "qt_label_size": [256, 256]
+    "qt_label_size": [224, 224]
   }
 }
